--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "stylelint --ignore-path='.gitignore' '{src,tests}/**/*.scss'"
   },
   "dependencies": {
+    "postcss-scss": "^4.0.1",
     "stylelint-config-prettier": "^9.0.0",
     "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-order": "^5.0.0",
