--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/devoxa/stylelint-config"
   },
   "scripts": {
+    "format": "prettier --ignore-path='.gitignore' --list-different --write .",
+    "format:check": "prettier --ignore-path='.gitignore' --check .",
     "lint": "stylelint --ignore-path='.gitignore' '{src,tests}/**/*.scss'"
   },
   "dependencies": {
@@ -21,7 +23,10 @@
     "stylelint": "^14.0.0"
   },
   "devDependencies": {
-    "stylelint": "14.16.1"
+    "@devoxa/prettier-config": "2.0.1",
+    "prettier": "2.8.3",
+    "stylelint": "14.16.1",
+    "typescript": "4.9.4"
   },
   "publishConfig": {
     "access": "public"
