--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:check": "prettier --ignore-path='.gitignore' --check .",
     "lint": "stylelint --ignore-path='.gitignore' '{src,tests}/**/*.scss'"
   },
+  "prettier": "@devoxa/prettier-config",
   "dependencies": {
     "postcss-scss": "4.0.6",
     "stylelint-config-prettier": "9.0.4",
