--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@devoxa/prettier-config": "2.0.2",
+    "postcss": "8.4.27",
     "prettier": "3.0.1",
     "stylelint": "15.10.2",
     "typescript": "5.1.6"
