--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@devoxa/prettier-config": "2.0.2",
+    "@types/node": "20.10.6",
     "postcss": "8.4.33",
     "prettier": "3.1.1",
     "stylelint": "15.11.0",
@@ -33,6 +34,6 @@
     "access": "public"
   },
   "volta": {
-    "node": "18.19.0"
+    "node": "20.10.0"
   }
 }
